--- a/chat/templates/chat/register.html
+++ b/chat/templates/chat/register.html
@@ -5,14 +5,15 @@
 {% endblock %}
 
 {% block content %}
-    <h1 style="color: white">Login Page</h1>
-     <div class="container">
+    <h1 style="color: white">Register Page</h1>
+    <div class="container">
         <div class="col-6 offset-3">
             <form method="post">
                 {% csrf_token %}
                 {{ form }}
-                <button class="btn btn-primary mt-3">Login</button>
+                <button class="btn btn-primary mt-3">Register</button>
             </form>
         </div>
     </div>
+
 {% endblock %}
