message sended with ajax

--- a/chat/templates/chat/layout.html
+++ b/chat/templates/chat/layout.html
@@ -21,8 +21,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark color" style="background-color: #016064">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'chat_home' %}"><strong>Online Chat</strong>
-        </a>
+        <a class="navbar-brand" href="{% url 'chat_home' %}"><strong>Online Chat</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
