--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -121,8 +121,9 @@
                                     {% csrf_token %}
                                     <div class="d-flex">
                                         <textarea cols="50" rows="1" class="form-control"
-                                                  name="message_text" id="baton_hleba"></textarea>
-                                        <button type="button" class=" ml-1 btn btn-primary" onclick="msg_sender()" >
+                                                  name="message_text" id="baton_hleba" minlength="0"></textarea>
+                                        <button type="button" class=" ml-1 btn btn-primary" onclick="msg_sender()"
+                                                id="baton">
 
                                             Send>
 
@@ -154,8 +155,10 @@
                     var pay = $('#user_full_name')
                     pay.html('')
                     pay.append('')
+
                     for (var i = 0; i < data.message.length; i++) {
-                        if (data.message[i].user.id !==  data.user_id[i]) {
+                        if (data.message[i].user !== data.user_id) {
+
                             pay.append('<div class="row">' +
                                 '<div class="col-8"> ' +
                                 '<div class="row"> ' +
@@ -191,21 +194,19 @@
                                 '</div>')
                         }
                     }
-
-
+                    $('#baton').prop('disabled', true);
                 },
                 error: function (data) {
-                    alert("Введите текст нормально 667!")
+                    alert("Введите текст нормально 6!")
                 }
             });
             $('#baton_hleba').val('');
         }
 
 
-         function get_msg_sender() {
-            console.log('ewr')
+        function get_msg_sender() {
+            console.log('ewr');
             var url = "{% url 'msg_send' message_title.id request.user.id %}";
-
 
             {#alert(url)#}
             $.get({
@@ -213,15 +214,15 @@
                 data: $("#form_msg").serialize(),
                 success: function (data) {
 
-                    console.log(data)
-                    var pay = $('#user_full_name')
-                    pay.html('')
-                    pay.append('')
+                    console.log(data);
+                    var pay = $('#user_full_name');
+                    pay.html('');
+                    pay.append('');
                     for (var i = 0; i < data.message.length; i++) {
-                        console.log(data.message[i].user.id)
-                        console.log( {{ request.user.id }})
-                        if (data.message[i].user.id !== data.user_id[i]) {
-                            pay.append( '<div class="row">' +
+                        console.log(data.message[i].user.id);
+                        console.log(data.user_id[i]);
+                        if (data.message[i].user !== data.user_id) {
+                            pay.append('<div class="row">' +
                                 '<div class="col-8"> ' +
                                 '<div class="row"> ' +
                                 '<div class="ml-1" style="width: 10%;"> ' +
@@ -263,16 +264,21 @@
                     alert("Введите текст нормально 667!")
                 }
             });
-            $('#baton_hleba').val('');
+            {#$('#baton_hleba').val('');#}
         }
 
 
         $(document).ready(function () {
-            get_msg_sender()
-        })
+            get_msg_sender();
+            setInterval(get_msg_sender, 1000);
+
+            var buttonDisabled = false;
+            $('#baton').prop('disabled', true);
+            $("#baton_hleba").on('change', function () {
+                if ($(this).val() != '') {
+                    $('#baton').prop('disabled', buttonDisabled);
+                }
+            })
+        });
     </script>
-
-
-
-
 {% endblock %}
