adding date, many groups and search messages by group

--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -170,6 +170,8 @@
                                 '<h6>' + data.message[i].user__first_name + ' ' + data.message[i].user__last_name + '</h6> ' +
                                 '<p class="box sb1">' + data.message[i].message_text +
                                 '</p> ' +
+                                '<p>' + data.message[i].date +
+                                '</p>' +
                                 '</div> ' +
                                 '</div> ' +
                                 '</div> ' +
@@ -184,6 +186,8 @@
                                 '<br>\n' +
                                 '<div class="box3" id="message_div">\n' + data.message[i].message_text +
                                 '</div>\n' +
+                                    '<p>' + data.message[i].date +
+                                '</p>' +
                                 '</div>\n' +
                                 '</div>\n' +
                                 '<div class="ml-1" style="width: 10%;">\n' +
@@ -232,6 +236,8 @@
                                 '<div class="col-10"> ' +
                                 '<h6>' + data.message[i].user__first_name + ' ' + data.message[i].user__last_name + '</h6> ' +
                                 '<p class="box sb1">' + data.message[i].message_text +
+                                    '<p>' + data.message[i].date +
+                                '</p>' +
                                 '</p> ' +
                                 '</div> ' +
                                 '</div> ' +
@@ -247,6 +253,8 @@
                                 '<br>\n' +
                                 '<div class="box3" id="message_div">\n' + data.message[i].message_text +
                                 '</div>\n' +
+                                    '<p>' + data.message[i].date +
+                                '</p>' +
                                 '</div>\n' +
                                 '</div>\n' +
                                 '<div class="ml-1" style="width: 10%;">\n' +
